2000-02-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/appendlet.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c,   transports/smtp/smtp.c:
	    More of the same work as yesterday evening/today early morning..

	* transports/smtp/smtp.c, transports/smtp/smtptls.c,
	  transports/libta/swriteheaders.c:
	    Some code rearrangements to better(?) handle stream
	    write errors.

2000-01-31  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/mxverify/mxverify-cgi.c:
	    Move "test with user-suppled address" before the
	    "test with postmaster" case.  In case the Postmaster
	    doesn't exist (which is an error in itself, though..),
	    the user supplied address is tested very least.

2000-01-25  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c, transports/smtp/appendlet.c:
	    Small error test rearrangements so that if  sferror()
	    is set at the output stream, no writing will happen.

2000-01-24  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/swriteheaders.c, transports/libta/fwriteheaders.c:
	    Do proper TAB-expand in entire header strings, if so directed.

	* utils/mxverify/*
	    Made it as stand-alone as possible; it still uses ZMailer's
	    configuration system, but does not need rest of the system
	    for compilation -- all parts it needs are localized copies.

	* transports/smtp/smtptls.c:
	    smtp_sfwrite() didn't break out at write-timeout quite
	    as I had intended..

	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
	    More debug stuff for hunting strance message breaks..

2000-01-23  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/token.c, router/rfc822hdrs.c:
	    Turn all header start spaces to optimized TABs plus spaces.

	* smtpserver/smtpcmds.c:
	    Now (!) people tell me that the most common M$ email clients
	    are absolutely stupid, and won't be able to correlate outgoing
	    SMTP verbs to responses they receive.  They just tell to user